placed js files in right directory

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <!-- The div that holds our map -->
     <div id="mapid"></div>
 
-    <script src="js/config.js"></script>
-    <script src="js/logic.js"></script>
+    <script src="static/js/config.js"></script>
+    <script src="static/js/logic.js"></script>
     
 </body>
 </html>
