--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <script src="static/js/config.js"></script>
     <script src="static/js/cities.js"></script>
-    <script src="static/js/logic.js"></script>
+    <script src="static/js/challenge_logic.js"></script>
     
 </body>
 </html>
